--- a/package.json
+++ b/package.json
@@ -17,7 +17,7 @@
     "sort-by": "^1.2.0"
   },
   "scripts": {
-    "start": "PORT=3001 react-scripts --max_old_space_size=8128 start",
+    "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "jest",
     "eject": "react-scripts eject"
