--- a/package.json
+++ b/package.json
@@ -4,17 +4,17 @@
   "private": true,
   "dependencies": {
     "@fortawesome/fontawesome-svg-core": "^6.2.1",
-    "@fortawesome/free-regular-svg-icons": "^6.2.1",
     "@fortawesome/free-solid-svg-icons": "^6.2.1",
     "@fortawesome/react-fontawesome": "^0.2.0",
     "@reduxjs/toolkit": "^1.9.1",
-    "localforage": "^1.10.0",
-    "match-sorter": "^6.3.1",
-    "react": "^18.1.0",
-    "react-dom": "^18.1.0",
+    "@types/react": "^16.8 || ^17.0 || ^18.0",
+    "@types/react-dom": "^16.8 || ^17.0 || ^18.0",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
+    "react-native": ">=0.59",
     "react-redux": "^8.0.5",
-    "react-router-dom": "^6.5.0",
-    "sort-by": "^1.2.0"
+    "react-router-dom": "^6.6.1",
+    "redux": "^4"
   },
   "scripts": {
     "start": "react-scripts start",
